<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@color/homeBackgroundColor"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:elevation="0dp"

        android:background="@color/homeBackgroundColor">

        <RelativeLayout
            android:id="@+id/toolbarPartsHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/toolbarTopPart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingStart="@dimen/horizontal_padding"
                android:paddingEnd="@dimen/horizontal_padding"
                android:paddingTop="@dimen/vertical_padding"
                android:paddingBottom="5dp"

                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/app_name"
                    android:textSize="@dimen/homeTitleSize"
                    android:textStyle="bold"
                    android:textColor="@color/appTitleColor"

                    android:layout_weight="1"/>

                <ImageButton
                    android:id="@+id/settingBtn"

                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:src="@drawable/ic_settings_black_24dp"
                    android:tint="@color/toolbarSettingsButtonColor"
                    android:background="@android:color/transparent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/toolbarSearchPart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"

                android:layout_below="@id/toolbarTopPart"
                >

                <com.example.iplayer.ui.components.ClearFocusEditText
                    android:id="@+id/searchView"

                    android:padding="@dimen/vertical_padding"

                    android:focusedByDefault="false"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"

                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:background="@drawable/search_view_bg"
                    android:hint="@string/search_view_hint"

                    android:textColor="@color/searchViewTextColor"
                    android:textColorHint="@color/searchViewTextColor" />

                <RadioGroup
                    android:id="@+id/radioGroupSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"

                    android:visibility="gone"
                    tools:visibility="gone">

                    <RadioButton
                        android:id="@+id/radioBtnSong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        tools:checked="true"

                        android:layout_marginEnd="@dimen/radio_btn_margin"

                        android:button="@null"
                        android:paddingTop="@dimen/radio_btn_horizontal_padding"
                        android:paddingBottom="@dimen/radio_btn_horizontal_padding"
                        android:paddingStart="@dimen/radio_btn_vertical_padding"
                        android:paddingEnd="@dimen/radio_btn_vertical_padding"

                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/radio_text_selector"

                        android:text="@string/radio_btn_song"
                        android:textSize="17sp"/>

                    <RadioButton
                        android:id="@+id/radioBtnAlbum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginEnd="@dimen/radio_btn_margin"

                        android:button="@null"
                        android:paddingTop="@dimen/radio_btn_horizontal_padding"
                        android:paddingBottom="@dimen/radio_btn_horizontal_padding"
                        android:paddingStart="@dimen/radio_btn_vertical_padding"
                        android:paddingEnd="@dimen/radio_btn_vertical_padding"

                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/radio_text_selector"

                        android:text="@string/radio_btn_album"
                        android:textSize="17sp"/>

                    <RadioButton
                        android:id="@+id/radioBtnArtist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginEnd="@dimen/radio_btn_margin"

                        android:button="@null"
                        android:paddingTop="@dimen/radio_btn_horizontal_padding"
                        android:paddingBottom="@dimen/radio_btn_horizontal_padding"
                        android:paddingStart="@dimen/radio_btn_vertical_padding"
                        android:paddingEnd="@dimen/radio_btn_vertical_padding"

                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/radio_text_selector"

                        android:text="@string/radio_btn_artist"
                        android:textSize="17sp"/>

                </RadioGroup>

            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nesterScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/homeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/small_padding"

                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="@dimen/small_padding">

                    <RadioGroup
                        android:id="@+id/radioGroupRecent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"

                        android:layout_weight="1">

                        <RadioButton
                            android:id="@+id/radioBtnRecent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginEnd="@dimen/horizontal_padding"

                            android:checked="true"
                            android:button="@null"

                            android:text="@string/home_recent"
                            android:textSize="19sp"
                            android:textStyle="bold"
                            android:textColor="@drawable/radio_home_text_selector"/>

                        <RadioButton
                            android:id="@+id/radioBtnMostViewed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:button="@null"

                            android:text="@string/home_most_viewed"
                            android:textStyle="bold"
                            android:textSize="19sp"
                            android:textColor="@drawable/radio_home_text_selector"/>

                    </RadioGroup>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_gravity="center"

                        android:text="@string/home_all"
                        android:textColor="@color/plainWhite"
                        android:textStyle="bold"
                        android:textSize="15sp"/>

                </LinearLayout>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewHistoryViewPager"

                    android:layout_width="match_parent"
                    android:layout_height="210dp"

                    android:clipToPadding="false"

                    android:paddingStart="@dimen/horizontal_padding"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/horizontal_padding"
                    android:paddingTop="@dimen/horizontal_padding"
                    android:layout_marginBottom="@dimen/small_padding"

                    android:text="@string/home_suggestions"
                    android:textColor="@color/plainWhite"
                    android:textStyle="bold"
                    android:textSize="21sp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/homeRecycleView"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"

                    tools:listitem="@layout/item_single_album_somg"
                    tools:itemCount="10"

                    android:visibility="visible"
                    tools:visibility="visible"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchRecycleView"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                tools:listitem="@layout/item_album"
                tools:itemCount="10"

                android:visibility="gone"
                tools:visibility="gone"/>

            <ProgressBar
                android:id="@+id/searchProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="150dp"
                android:layout_gravity="center_horizontal"

                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/nothingFound"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                android:layout_marginTop="40dp"

                android:gravity="center"
                android:visibility="gone"
                tools:visibility="gone"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="Ups, nothing found"
                    android:textColor="@color/plainWhite"

                    android:textSize="21sp"/>

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"

                    android:src="@drawable/empty"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/startTyping"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                android:layout_marginTop="40dp"

                android:animateLayoutChanges="true"
                android:gravity="center"
                android:visibility="gone"
                tools:visibility="gone"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/type_to_search"
                    android:textColor="@color/plainWhite"

                    android:textSize="21sp"/>

                <ImageView
                    android:layout_width="1600dp"
                    android:layout_height="160dp"

                    android:layout_marginTop="10dp"

                    android:src="@drawable/typing"/>

            </LinearLayout>

        </FrameLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>