<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
android:id="@+id/albumMainContainer"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"

    app:behavior_overlapTop="0dp"

android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.album.AlbumFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:elevation="0dp"

        tools:background="@color/softBlue">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appbarInnerContainer"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/appbarBg"
                android:layout_width="match_parent"
                android:layout_height="280dp"

                app:layout_constraintTop_toTopOf="parent"

                android:scaleType="center"/>

            <TextView
                android:id="@+id/bandNameTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:layout_marginTop="20dp"
                android:alpha="0"

                tools:text="Linkin Park"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/plainWhite"/>

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"

                android:layout_marginTop="@dimen/_10dp"
                android:src="@drawable/ic_chevron_left_white_24dp"
                android:background="@null"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/artworkContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:cardCornerRadius="@dimen/corner_radius"
                android:clipToPadding="true"

                android:layout_marginTop="28dp">

                <ImageView
                    android:id="@+id/artwork"
                    android:layout_width="160dp"
                    android:layout_height="160dp"

                    android:src="@drawable/gorillaz"
                    android:scaleType="fitCenter"/>

            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/btnMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:padding="@dimen/_5dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_5dp"

                android:src="@drawable/ic_more_horiz_whtite_24dp"
                android:background="@null"/>

            <LinearLayout
                android:id="@+id/albumInfoContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                app:layout_constraintTop_toBottomOf="@id/artworkContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:gravity="center"
                >

                <TextView
                    android:id="@+id/albumName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="17dp"

                    tools:text="Feelin Good Inc."
                    android:textColor="@color/plainWhite"
                    android:textStyle="bold"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/bandName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="-3dp"
                    android:layout_marginStart="4dp"
                    android:drawableEnd="@drawable/ic_chevron_right_white_24dp"

                    tools:text="Linkin Park"
                    android:textColor="@color/greyishGrey"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/genreAndYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="-3dp"

                    tools:text="Rock • 2020"
                    android:textColor="@color/greyishGrey"
                    android:textSize="13sp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/albumNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/homeBackgroundColor"
        android:overScrollMode="never"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/horizontal_padding"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="120dp"
                    android:layout_height="40dp"

                    android:layout_weight="1"

                    android:layout_marginEnd="@dimen/album_btn_margin_half"

                    android:background="@drawable/button_background"

                    android:text="@string/album_btn_play"
                    android:textAllCaps="false"
                    android:textColor="@color/plainWhite"/>

                <Button
                    android:layout_width="120dp"
                    android:layout_height="40dp"

                    android:layout_weight="1"
                    android:layout_gravity="center"

                    android:layout_marginStart="@dimen/album_btn_margin_half"

                    android:background="@drawable/button_background"

                    android:text="@string/album_btn_add"
                    android:textAllCaps="false"
                    android:textColor="@color/plainWhite"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:layout_marginTop="@dimen/vertical_padding"
                android:layout_marginBottom="@dimen/vertical_padding"

                android:background="@color/plainWhite"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingTop="6dp"
                android:paddingBottom="6dp"

                android:gravity="center"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="18dp"

                    android:src="@drawable/shuffle"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="@dimen/_10dp"

                    android:text="@string/album_shuffle_all"
                    android:textColor="@color/plainWhite"
                    android:textSize="17sp"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/albumRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:nestedScrollingEnabled="false"

                tools:listitem="@layout/item_album_track"
                tools:itemCount="10"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>